--- a/app/views/animals/_picture_list.html.erb
+++ b/app/views/animals/_picture_list.html.erb
@@ -1,11 +1,30 @@
 <%= turbo_frame_tag 'animals' do %>
+  <%= form_with url: cart_add_path, method: :post, 
+      data: { controller: "checkboxselectall",
+                target: "form",
+                action: "submit->checkboxselectall#submitForm",
+                turbo_frame: "_top" 
+              } do |form| %>
+    <div class="flex md:flex justify-between items-center ml-2 mb-2">
+      <div class="error_text" id="checkbox_error">
+      </div>
+      <div class>
+        <%= submit_tag t('text.Add to Cart'), class: "primary_button" %>
+      </div>
+    </div>
+    <div>
+      <input type="checkbox" aria-labelledby="select_all" class="check_box ml-2" data-checkboxselectall-target="checkbox_all" data-action="change->checkboxselectall#toggleCheckbox">
+      <span id="select_all"><%= t('text.Select All') %></span>
+    </div>
     <div class="">
-      <ul role="list" class="grid grid-cols-2 gap-4 sm:grid-cols-2 md:grid-cols-4 lg:grid-cols-6 m-4">
+      <ul role="list" class="grid grid-cols-2 gap-4 sm:grid-cols-2 md:grid-cols-4 m-4">
         <% @animals.each do |animal| %>
           <li class=" bg-white rounded-lg shadow-md divide-y divide-gray-400 px-2 grid place-items-stretch bg-white border border-gray-300 rounded-lg">
+            <input type="checkbox" aria-labelledby=<%= "animal_ids_#{animal.id}" %> name="animal_ids[<%= animal.id %>]" id="animal_ids_<%= animal.id %>" value="0" class="check_box" data-checkboxselectall-target="checkbox" data-action="change->checkboxselectall#toggleCheckboxAll">
             <%= render 'animal_card', animal: animal %>
           </li>
         <% end %>
       </ul>
     </div>
+  <% end %>
 <% end %>
