--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -27,66 +27,55 @@
               </div>
             </div>
             <div class="">
-              <div class="">
-                <div class="mx-2 mb-1">
-                  <div>
-                    <%= f.label :animal_type_id %>
-                    <%= f.collection_select(:animal_type_id_eq, @animal_types, :id, :name, { include_blank: "#{t('text.Select')} ..." }, { class: 'input_text_field' }) %>
-                  </div>
-                  <div>
-                    <%= f.label :nickname_cont %>
-                    <%= f.search_field :nickname_cont, placeholder: t('text.Contains'), class: 'input_text_field' %>
-                  </div>
-                  <div>
-                    <%= f.label :surname_cont %>
-                    <%= f.search_field :surname_cont, placeholder: t('text.Contains'), class: 'input_text_field' %>
-                  </div>
-                  <div>
-                    <%= f.label :gender %>
-                    <%= f.select(:gender_eq, gender_lists, { include_blank: "#{t('text.Select')} ..." }, { class: "input_text_field" }) %>
-                  </div>
-                  <div class="flex items-end">
-                    <div class="flex-1 w-1/2">
-                      <%= f.label :arival_date %>
-                      <%= f.text_field :arival_date_gteq, placeholder: t('text.From'), class: 'input_text_field',
-                        data: {
-                          controller: "flatpickr",
-                          flatpickr_date_format: "Y-m-d"
-                        } %>
-                    </div>
-                    <div class="ml-1 flex-1 w-1/2">
-                      <%= f.text_field :arival_date_lteq, placeholder: t('text.To'), class: 'input_text_field',
-                        data: {
-                          controller: "flatpickr",
-                          flatpickr_date_format: "Y-m-d"
-                        } %>
-                    </div>
-                  </div>
+              <div class="mb-2">
+                <%= f.label :animal_type_id %>
+                <%= f.collection_select(:animal_type_id_eq, @animal_types, :id, :name, { include_blank: "#{t('text.Select')} ..." }, { class: 'input_text_field' }) %>
+              </div>
+              <div class="mb-2">
+                <%= f.label :nickname_cont %>
+                <%= f.search_field :nickname_cont, placeholder: t('text.Contains'), class: 'input_text_field' %>
+              </div>
+              <div class="mb-2">
+                <%= f.label :surname_cont %>
+                <%= f.search_field :surname_cont, placeholder: t('text.Contains'), class: 'input_text_field' %>
+              </div>
+              <div class="mb-2">
+                <%= f.label :gender %>
+                <%= f.select(:gender_eq, gender_lists, { include_blank: "#{t('text.Select')} ..." }, { class: "input_text_field" }) %>
+              </div>
+              <div class="flex items-end mb-2">
+                <div class="flex-1 w-1/2">
+                  <%= f.label :arival_date %>
+                  <%= f.text_field :arival_date_gteq, placeholder: t('text.From'), class: 'input_text_field',
+                    data: {
+                      controller: "flatpickr",
+                      flatpickr_date_format: "Y-m-d"
+                    } %>
+                </div>
+                <div class="ml-1 flex-1 w-1/2">
+                  <%= f.text_field :arival_date_lteq, placeholder: t('text.To'), class: 'input_text_field',
+                    data: {
+                      controller: "flatpickr",
+                      flatpickr_date_format: "Y-m-d"
+                    } %>
                 </div>
               </div>
-                  
+              <div class="mb-2">
+                <%= f.label :aviary_id %>
+                <%= f.collection_select(:aviary_id_eq, @aviaries, :id, :name, { include_blank: "#{t('text.Select')}" }, { class: 'input_text_field' }) %>
+              </div>
+              <div class="mb-2">
+                <%= f.label :description_cont %>
+                <%= f.search_field :description_cont, placeholder: t('text.Contains'), class: 'input_text_field' %>
+              </div>
+              <div class="mb-2">
+                <%= f.label :history_cont %>
+                <%= f.search_field :history_cont, placeholder: t('text.Contains'), class: 'input_text_field' %>
+              </div>
 
-              <div class="">
-                <div class="mx-2 mb-1">
-                  <div>
-                    <%= f.label :aviary_id %>
-                    <%= f.collection_select(:aviary_id_eq, @aviaries, :id, :name, { include_blank: "#{t('text.Select')}" }, { class: 'input_text_field' }) %>
-                  </div>
-                  <div>
-                    <%= f.label :description_cont %>
-                    <%= f.search_field :description_cont, placeholder: t('text.Contains'), class: 'input_text_field' %>
-                  </div>
-                  <div>
-                    <%= f.label :history_cont %>
-                    <%= f.search_field :history_cont, placeholder: t('text.Contains'), class: 'input_text_field' %>
-                  </div>
-
-                  <div>
-                    <%= f.label :description_or_history_cont %>
-                    <%= f.search_field :description_or_history_cont, placeholder: t('text.Contains'), class: 'input_text_field' %>
-                  </div>
-
-                </div>
+              <div class="mb-2">
+                <%= f.label :description_or_history_cont %>
+                <%= f.search_field :description_or_history_cont, placeholder: t('text.Contains'), class: 'input_text_field' %>
               </div>
               <div class="my-2 col-span-2 flex justify-start">
                 <div class="mr-2">
@@ -130,7 +119,7 @@
       </div>
       <div>
         <%= turbo_frame_tag "turbo-animals" do %>
-          <div class="mb-10 min-w-full" id="animals_listing">
+          <div class="mb-20 min-w-full" id="animals_listing">
             <div class="my-2" >
               <%= page_entries_info @animals %>
             </div>
