--- a/app/views/aviaries/_form.html.erb
+++ b/app/views/aviaries/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: aviary, class: "contents") do |form| %>
   <% if aviary.errors.any? %>
-    <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3">
-      <h2><%= pluralize(aviary.errors.count, "error") %> prohibited this aviary from being saved:</h2>
+  <div id="error_explanation" class="text-base text-red-950 px-3 pb-2 font-medium">
+    <p class="text-lg"><%= t('error', count: aviary.errors.count) %> <%= t('forms.messages.prohibited this record from being saved') %>:</p>
 
       <ul>
         <% aviary.errors.each do |error| %>
@@ -13,12 +13,12 @@
 
   <div class="my-5">
     <%= form.label :has_sections %>
-    <%= form.checkbox :has_sections, class: "block mt-2 h-5 w-5" %>
+    <%= form.checkbox :has_sections, class: "check_box" %>
   </div>
 
   <div class="my-5">
     <%= form.label :name %>
-    <%= form.text_field :name, class: "input_text_field" %>
+    <%= form.text_field :name, class: "input_text_field", required: true %>
   </div>
 
   <div class="my-5">
