--- a/app/views/aviaries/sections/_form.html.erb
+++ b/app/views/aviaries/sections/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
   <div class="my-5">
     <%= form.label :name %>
-    <%= form.text_field :name, class: "input_text_field" %>
+    <%= form.text_field :name, class: "input_text_field", required: true %>
     <% if form.object.persisted? %>
       <%= form.submit t('forms.buttons.submit'), class: "primary_button mt-2" %>
       <%= link_to aviary_section_path(aviary, section) do %>
