--- a/app/views/medical_procedures/index.html.erb
+++ b/app/views/medical_procedures/index.html.erb
@@ -25,12 +25,12 @@
       </div>
       <div class="grid grid-cols-2 gap-x-2">
         <div class="">
-          <div class="mx-2 mb-1">
-            <div>
+          <div class="mx-2 mb-2">
+            <div class="mb-2">
               <%= f.label :animal_nickname_cont, t('text.Animal Nickname contains') %>
               <%= f.search_field :animal_nickname_cont, placeholder: t('text.Contains'), class: 'input_text_field' %>
             </div>
-            <div>
+            <div class="mb-2">
               <%= f.label :procedure_type_id %>
               <%= f.collection_select(:procedure_type_id_eq, @procedure_type, :id, :name, { include_blank: "#{t('text.Select')} ..."}, { class: 'input_text_field' }) %>
             </div>
@@ -38,8 +38,8 @@
           </div>
         </div>
         <div class="">
-          <div class="mx-2 mb-1">
-            <div class="flex items-end">
+          <div class="mx-2 mb-2">
+            <div class="flex items-end mb-2">
               <div class="flex-1 w-1/2">
                 <%= f.label :date_planned %>
                 <%= f.text_field :date_planned_eq, placeholder: t('text.Date'), class: 'input_text_field',
@@ -49,7 +49,7 @@
                   } %>
               </div>
             </div>
-            <div class="flex items-end">
+            <div class="flex items-end mb-2">
               <div class="flex-1 w-1/2">
                 <%= f.label :date_completed %>
                 <%= f.text_field :date_completed_eq, placeholder: t('text.Date'), class: 'input_text_field',
