--- a/app/views/procedure_types/_form.html.erb
+++ b/app/views/procedure_types/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: procedure_type, class: "contents") do |form| %>
   <% if procedure_type.errors.any? %>
-    <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3">
-      <h2><%= pluralize(procedure_type.errors.count, "error") %> prohibited this procedure_type from being saved:</h2>
+  <div id="error_explanation" class="text-base text-red-950 px-4 pb-2 font-medium">
+    <p class="text-lg"><%= t('error', count: procedure_type.errors.count) %> <%= t('forms.messages.prohibited this record from being saved') %>:</p>
 
       <ul>
         <% procedure_type.errors.each do |error| %>
@@ -13,12 +13,12 @@
 
   <div class="my-5">
     <%= form.label :name %>
-    <%= form.text_field :name, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.text_field :name, class: "input_text_field", required: true %>
   </div>
 
   <div class="my-5">
     <%= form.label :description %>
-    <%= form.text_field :description, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.text_field :description, class: "input_text_field" %>
   </div>
 
   <div class="inline">
