--- a/app/views/medical_procedures/new.html.erb
+++ b/app/views/medical_procedures/new.html.erb
@@ -1,5 +1,5 @@
 <div class="mx-auto md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl"><%= t('text.New') %></h1>
+  <h1 class="font-bold text-4xl"><%= t('text.New Medical Procedure') %></h1>
 
   <%= render "form", medical_procedure: @medical_procedure %>
 
