--- a/app/views/procedure_types/new.html.erb
+++ b/app/views/procedure_types/new.html.erb
@@ -1,5 +1,5 @@
 <div class="mx-auto md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl"><%= t('text.New') %></h1>
+  <h1 class="font-bold text-4xl"><%= t('text.New') %> <%= t('text.Procedure Type') %></h1>
 
   <%= render "form", procedure_type: @procedure_type %>
 
