--- a/app/views/aviaries/edit.html.erb
+++ b/app/views/aviaries/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="mx-auto md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl"><%= t('text.Editing') %></h1>
+  <h1 class="font-bold text-4xl"><%= t('text.Editing') %> <%= t('text.Aviary') %></h1>
 
   <%= render "form", aviary: @aviary %>
 
