--- a/app/views/animals/_animal_card.html.erb
+++ b/app/views/animals/_animal_card.html.erb
@@ -10,6 +10,9 @@
       <div class="text-xs px-2 font-bold">
         <%= show_animal(animal) %>
       </div>
+      <div class="text-xs px-2 font-bold">
+        <%= animal.animal_type.name %>
+      </div>
     <% end %>
     <div class="text-xs px-2">
       <%= animal.gender %>, <%= age(animal) %>
