--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -100,10 +100,15 @@
         <div> </div>
         <%= form_with url: animals_path, method: :get, class: "", data: { autosubmit_target: "form", turbo_frame: "turbo-animals" } do |form| %>
           <div class="flex justify-between items-center gap-4">
-              <div class="display inline">
-                <label for="q_s" class="fancy_label">Sort</label>
-                <%= select_tag "q[s]", options_for_select(fields_to_sort_animals, selected: @sort_by), include_blank: "Sort", class: "input_text_field",
-                  :"data-action" => "change->autosubmit#submit" %>
+            <div class="display inline">
+              <label for="sort" class="fancy_label">Sort</label>
+              <%= select_tag "sort", options_for_select(fields_to_sort_animals, selected: @sort_by), include_blank: "Sort", class: "input_text_field",
+                :"data-action" => "change->autosubmit#submit" %>
+            </div>
+            <div>
+              <label for="order" class="fancy_label">Order</label>
+              <%= select_tag "order", options_for_select([["asc", "asc"], ["desc", "desc"]], selected: @order), class: "input_text_field",
+                :"data-action" => "change->autosubmit#submit" %>
             </div>
             <div>
               <label for="switch_view" class="fancy_label">View</label>
